carousel button mobile fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -648,7 +648,7 @@ footer .footer__content p {
     position: absolute;
     left: 30px;
     bottom: 10px;
-    width: 80px;
+    width: 120px;
     height: 30px;
     padding: 10px;
     background-color: var(--white);
